Bug 99130 - OpenGL Antialiasing of curve filled becomes polygon
Summary: OpenGL Antialiasing of curve filled becomes polygon
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-04-06 20:44 UTC by Jean
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Curved area segment becomes linear with OpenGL antialiasing turned on (218.87 KB, application/vnd.oasis.opendocument.graphics)
2016-04-06 20:44 UTC, Jean
Details
comparison of OpenGL and default renderer (126.50 KB, image/png)
2016-04-20 12:56 UTC, Dennis Roczek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean 2016-04-06 20:44:17 UTC
Created attachment 124137 [details]
Curved area segment becomes linear with OpenGL antialiasing turned on

Error: With OpenGL rendering active curved filled area segment becomes polygon when antialiasing turned on in high zoom levels.

OK: With OpenGL rendering off filled areas are round in high zoom levels

seems like limitation of OpenGL rendering. Since OpenGL has no curves.
OpenGL without antialiasing draws correctly.
Comment 1 Dennis Roczek 2016-04-20 12:28:48 UTC
confirmed with
Version: 5.1.2.2 (x64)
Build-ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU-Threats: 4; BS-Version: Windows 6.19; UI-Render: GL; 
Gebietsschema: de-DE (de_DE)

/me will retest with new master now (I'm letting this unconfirmed now at least as I habe known OpenGL bugs with my Intel driver)
Comment 2 Dennis Roczek 2016-04-20 12:56:49 UTC
Created attachment 124532 [details]
comparison of OpenGL and default renderer

confirmed with

Version: 5.2.0.0.alpha0+
Build ID: 3dca8575d63db50b0120fbff09bbfcd056fa3732
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-20_05:07:29
Locale: de-DE (de_DE)

(or better saying only with OpenGL activated)
Comment 3 Michael Meeks 2016-04-27 12:33:19 UTC
Ah - they are both polygons I think ;-) but its whether you can see the sub-division. Nevertheless - I suspect Tomaz is the expert on sub-division here - Tomaz ?
Comment 4 Tomaz Vajngerl 2016-04-28 13:12:18 UTC
Yeah, recursive subdivision from basegfx does not have a smart exit condition (threshold angle) and I used that for polyline drawing. I could change to subdivide to a smaller threshold angle but I would like rather improve the exit condition. 

Funny is that in gtk vcl backend without GL we also use that for polygons in certain case but nobody noticed all this time.
Comment 5 Commit Notification 2016-05-25 15:36:54 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee3bc82d071fc8a7d835399f33c07320f87992ec&h=libreoffice-5-1

tdf#99130 use subdivision on B2DPolygon, angle based subdivision

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Meeks 2016-05-26 12:44:26 UTC
Closing - thanks Tomaz ! =)
Comment 7 Adolfo Jayme Barrientos 2016-05-27 04:23:15 UTC
For reference, this is the master commit: https://cgit.freedesktop.org/libreoffice/core/commit/?id=37ed508022e0be8b793caa4748cfee634c1c8a9c