vcl/opengl/gdiimpl.cxx
@@ -2064,9 +2064,7 @@ bool OpenGLSalGraphicsImpl::drawPolyLine(
         basegfx::B2DPolygon aPolygon(rPolygon);
 
         if (aPolygon.areControlPointsUsed())
-            aPolygon = basegfx::tools::polygonSubdivide(aPolygon, 5 * F_PI180);
-        else
-            aPolygon.removeDoublePoints();
+            aPolygon = aPolygon.getDefaultAdaptiveSubdivision();
 
         DrawPolyLine(aPolygon, fLineWidth, eLineJoin, eLineCap, fMiterMinimumAngle);
     }
